--- a/resources/sass/parts/_skills.scss
+++ b/resources/sass/parts/_skills.scss
@@ -144,6 +144,7 @@
     }
 
     @media (max-width: sizes.$bp-s) {
+        margin: sizes.$gap * 5 auto;
         &__container {
             width: 100%;
         }
